sample07-2 ビジネスのNavbar（トグルボタン、ハンバーガーメニュー）を修正
Changes to be committed:
    modified:   sample07-2/css/style.css
    modified:   sample07-2/index.html

--- a/sample07-2/css/style.css
+++ b/sample07-2/css/style.css
@@ -58,6 +58,11 @@ a:hover {
 	padding: 15em 0em;
 }
 
+.navbar-toggler {
+	background: #3498DB;
+}
+
+
 /*********************************************************************************/
 /* Logo                                                                          */
 /*********************************************************************************/
